--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -29,3 +29,23 @@ body
 
 img
     -ms-interpolation-mode: bicubic
+
+body
+    background-attachment: fixed
+    background: -webkit-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
+    background: -moz-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
+    background: -ms-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
+    background: -o-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
+    background: radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
+    position: relative
+    background-size: 1000px 400px
+    background-position: center -65px
+    background-repeat: no-repeat
+    font-family: sans-serif
+    overflow: auto
+    color: #A6A5BA
+
+.btn.btn-warning
+    background-color: #911146
+    border: none
+    border-radius: 1px
