--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -7,3 +7,10 @@ header
         text-align: right
         a
             text-decoration: none
+
+.navbar-brand
+    padding-top: 3px
+    padding-right: 22px
+    padding-bottom: 3px
+    img
+        max-height: 100%
