--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -20,7 +20,7 @@ body
     background: -o-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
     background: radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728
     position: relative
-//    background-size: 1000px 400px
+    background-size: 1000px 400px
     background-position: center -65px
     background-repeat: no-repeat
     font-family: sans-serif
