It's 2015, why do we still need vender prefixes
So... like no browser supports HTML5 radial gradients without a vendor
prefix, wtf. 2011 called, no body answered.

--- a/_style/style.dev.css
+++ b/_style/style.dev.css
@@ -29,6 +29,8 @@ body {
 body{
     background-attachment: fixed;
     background: -webkit-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+       background: -moz-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+        background: -ms-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
             background: radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
     position: relative;
     background-size: 1000px 400px;
