--- a/_style/api.dev.css
+++ b/_style/api.dev.css
@@ -33,6 +33,12 @@ img {
     -ms-interpolation-mode: bicubic;
 }
 
+img[src*="slider-"] {
+    border: 2px solid rgba(43, 39, 40, 0.1);
+    padding: 9px;
+    border-radius: 5px;
+}
+
 hr {
     height: 2px;
     border: none;
