Added checkForUpdates to API documentation

--- a/_style/api.dev.css
+++ b/_style/api.dev.css
@@ -33,7 +33,8 @@ img {
     -ms-interpolation-mode: bicubic;
 }
 
-img[src*="slider-"] {
+img[src*="slider-"],
+img[src*="check-for-updates"] {
     border: 2px solid rgba(43, 39, 40, 0.1);
     padding: 9px;
     border-radius: 5px;
@@ -75,6 +76,11 @@ p,
 .wrapper li {
     font-size: 0.85em;
     line-height: 1.2em;
+}
+
+.wrapper ol li {
+    margin-top: 8px;
+    list-style-type: decimal;
 }
 
 tr, th, td {
