added ugui.platform image

--- a/_style/api.dev.css
+++ b/_style/api.dev.css
@@ -34,7 +34,8 @@ img {
 }
 
 img[src*="slider-"],
-img[src*="check-for-updates"] {
+img[src*="check-for-updates"],
+img[src*="ugui.platform"] {
     border: 2px solid rgba(43, 39, 40, 0.1);
     padding: 9px;
     border-radius: 5px;
