Hide GitHub corner on small screen

--- a/_style/style.dev.css
+++ b/_style/style.dev.css
@@ -167,13 +167,18 @@ ol {
     }
 }
 
-@media (max-width:500px){
+@media (max-width:550px){
+    .github-corner {
+        display: none;
+    }
+/*
     .github-corner:hover .octo-arm {
         animation: none;
     }
     .github-corner .octo-arm {
         animation: octocat-wave 560ms ease-in-out;
     }
+*/
 }
 
 .instructions {
