Improvements to JS show and hide of elements
Show/hide screenshot thumbnails, give OS icons active classes depending
on what is selected

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -127,6 +127,10 @@ nav img {
     header svg {
         height: 29px;
     }
+    .active {
+        background-color: #EFDDCA;
+        border-bottom: 1px solid #ED8C2B;
+    }
 }
 
 .lower-os {
