--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,19 +1,30 @@
 
 // The main document, every page on the site refers to this basic document
 
+::-webkit-scrollbar
+    width: 14px
+
+::-webkit-scrollbar-button
+    background: #ED8C2B
+    height: 18px
+
+::-webkit-scrollbar-track-piece
+    background-color: #2B2728
+
+::-webkit-scrollbar-thumb
+    background: #911146
+
 *,
 *:before,
 *:after
     box-sizing: border-box
 
-html
-    +bmp0
-    width: 100%
-    height: 100%
-
+html,
 body
     +bmp0
     width: 100%
+    height: 100%
+    font-family: sans-serif
 
 img
     -ms-interpolation-mode: bicubic
