--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,18 +1,27 @@
-@charset "utf-8";             // Character type for the stylesheet
+@charset "utf-8";              // Character type for the stylesheet
+
+//Webfonts
+@import url(http://fonts.googleapis.com/css?family=Teko:300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 
 //Stuff that goes at the start
-@import "_var.sass";          // Sass Variables and Mixins - Does not effect page, but other Sass files reference this file.
-@import "_meyer.sass";        // Resets browser defaults so browsers render pages the same
-@import "_normalize.sass";    // Removes inconsistencies in the way different browsers render items by default
+@import "_var.sass";           // Sass Variables and Mixins - Does not effect page, but other Sass files reference this file.
+@import "_ven.meyer.sass";     // Resets browser defaults so browsers render pages the same
+@import "_ven.normalize.sass"; // Removes inconsistencies in the way different browsers render items by default
+
+//Plugins
+@import "_ven.zenburn.sass";   // Theme for highlight.js embedded code snippets used on API docs and Package.json page
 
 //Stuff that affects every page
-@import "_main.sass";         // Main CSS for the site
-@import "_header.sass";       // CSS for the header and navigation at the top of each page
-@import "_footer.sass";       // CSS for the footer at the bottom of every page
+@import "_main.sass";          // Main CSS for the site
+@import "_header.sass";        // CSS for the header and navigation at the top of each page
+@import "_footer.sass";        // CSS for the footer at the bottom of every page
 
 //Stuff that affects specific pages
+@import "_temp.scss";          // This needs to be implemented into another file, Dawn styles for coming soon page
 @import "_homepage.scss";
+@import "_api.sass";           // Styles specific to the API docs
 
 //Stuff that goes at the end
-@import "_mediaqueries.sass"; // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
-@import "_crossbrowser.sass"; // CSS to correct issues that only occur in specific environments
+@import "_mediaqueries.sass";  // Adjusts the CSS of elements depending on browser or device resolution. Adaptive Web Design.
+@import "_crossbrowser.sass";  // CSS to correct issues that only occur in specific environments
