Show larger screenshots and accompanying text when clicking thumbnails

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -121,6 +121,7 @@ body.homepage {
     .lower-os {
         border-top: 1px solid #fff;
         img {
+            cursor: pointer;
             width: 67px;
             margin: 10px;
         }
