--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -1,82 +1,71 @@
 body.homepage {
+    color: #3B3F42;
     font-family: "Open Sans", sans-serif;
     text-align: center;
-    color: #3b3f42;
-
     a {
         text-decoration: none;
     }
-
     h2 {
-        font-weight: 700;
-        text-align: left;
         font-size: 25px;
-    }
-
-    h3 {
         font-weight: 700;
         text-align: left;
+    }
+    h3 {
         font-size: 20px;
+        font-weight: 700;
+        text-align: left;
         vertical-align: top;
     }
-
     /* NAVIGATION*/
-
     nav,
     footer {
         max-width: 800px;
         margin: 0px auto;
-        text-align: left;
         line-height: 40px;
+        text-align: left;
         a {
-            font-weight: 700;
-            font-size: 12px;
-            color: #1F2C33;
-            padding: 0px 5px 0px;
             display: inline-block;
+            padding: 0px 5px 0px;
+            color: #1F2C33;
+            font-size: 12px;
+            font-weight: 700;
         }
     }
-
     nav img {
         width: 26px;
         vertical-align: -7px;
     }
-
     .nav-right {
-        float: right;
         display: inline-block;
         line-height: 40px;
+        float: right;
     }
-
     /* .start also works on the bottom div. */
-
     .start {
-        margin-left: 50px;
         background-color: #911146;
-        color: #ffffff;
+        margin-left: 50px;
+        color: #FFF;
     }
-
     /*DIVS*/
-
-    .os, .screenshots {
+    .os,
+    .screenshots {
         display: inline-block;
     }
-
-    .os, .screenshots {
+    .os,
+    .screenshots {
         margin: 30px 0px 30px 0px;
     }
-
     .banner {
         background-color: purple;
-        border-top: 2px solid #cfcfcf;
-        color: #9b9ba8;
+        border-top: 2px solid #CFCFCF;
+        color: #9B9BA8;
         h3 {
             font-family: Teko, sans-serif;
             font-size: 32px;
-            color: #ffbc92;
+            color: #FFBC92;
         }
         a {
-            color: #f2b08c;
+            color: #F2B08C;
             font-weight: bold;
         }
         p {
@@ -84,10 +73,9 @@ body.homepage {
             margin: auto;
         }
     }
-
     .os {
-        height: 290px;
         width: 240px;
+        height: 290px;
         background-color: #F0F1F2;
         font-size: 0px;
         vertical-align: top;
@@ -101,10 +89,10 @@ body.homepage {
             font-size: 15px;
             background-color: #F0F1F2;
             &:first-of-type {
-                border-right:  1px solid #fff;
+                border-right:  1px solid #FFF;
             }
             &:last-of-type {
-                border-left: 1px solid #fff;
+                border-left: 1px solid #FFF;
             }
         }
         header svg {
@@ -113,62 +101,56 @@ body.homepage {
         }
         .active {
             background-color: #EFDDCA;
-            border-bottom: 1px solid #ED8C2B;
             border-right: 1px solid #DFCFC1;
+            border-bottom: 1px solid #ED8C2B;
         }
     }
-
     .tab {
         cursor: pointer;
     }
-
     .lower-os {
-        border-top: 1px solid #fff;
+        border-top: 1px solid #FFF;
         img {
-            cursor: pointer;
             width: 67px;
             margin: 10px;
+            cursor: pointer;
         }
     }
-
-    .windows.tab:hover, .osx.tab:hover, .linux.tab:hover {
+    .windows.tab:hover,
+    .osx.tab:hover,
+    .linux.tab:hover {
         background-color: #EFDDCA;
     }
-
     .screenshots {
-        background-color: #FFFFFF;
-        color: #1F2C33;
-        height: 290px;
         width: 660px;
+        height: 290px;
+        background-color: #FFF;
+        color: #1F2C33;
         vertical-align: top;
         div {
             margin: 12px 0px 0px 60px;
         }
         img {
             height: 165px;
+            margin: 15px 15px 0px 0px;
             text-align: left;
             float: left;
-            margin: 15px 15px 0px 0px;
         }
         p {
             font-size: 12px;
             text-align: left;
         }
     }
-
-/**********UNCOMMENT THE BELOW IF NEEDED**********/
-
+    /**********UNCOMMENT IF NEEDED**********/
     // .screenshots-text {
     //     overflow: auto;
     // }
-
     .bottom {
         background-color: #F8F9FA;
         border-top: 1px solid #EDEFF2;
     }
-
     .get-started {
-        background-color: #fff;
+        background-color: #FFF;
         padding: 120px 0px 68px 0px;
         a {
             padding: 5px 10px;
@@ -176,9 +158,7 @@ body.homepage {
             font-weight: 700;
         }
     }
-
     /* FOOTER */
-
     footer {
         line-height: 20px;
         font-size: 12px;
@@ -193,17 +173,17 @@ body.homepage {
 #features {
     figure {
         display: inline-block;
+        margin: 0px 15px;
         padding: 20px 0px 60px 0px;
         vertical-align: top;
-        margin: 0px 15px;
     }
     img {
         width: 110px;
     }
     figcaption {
         display: block;
-        font-weight: 700;
-        font-size: 16px;
         margin-top: 5px;
+        font-size: 16px;
+        font-weight: 700;
     }
 }
