continuing to polish

--- a/_sass/_mediaqueries.sass
+++ b/_sass/_mediaqueries.sass
@@ -16,6 +16,11 @@
     #wrapper
         max-width: 500px
 
+@media screen and (max-width: 570px)
+    .homepage
+        .start
+            margin-left: 0px
+
 //2. Portrait Phones
 @media screen and (max-width: 518px)
     #wrapper
