--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -16,9 +16,9 @@
         text-align: left;
         vertical-align: top;
     }
+
     /* NAVIGATION*/
-    nav,
-    footer {
+    nav {
         max-width: 800px;
         margin: 0px auto;
         line-height: 40px;
@@ -30,10 +30,10 @@
             font-size: 12px;
             font-weight: 700;
         }
-    }
-    nav img {
-        width: 26px;
-        vertical-align: -7px;
+        img {
+            width: 26px;
+            vertical-align: -11px;
+        }
     }
     .nav-right {
         display: inline-block;
@@ -48,6 +48,7 @@
         line-height: 42px;
         vertical-align: top;
     }
+
     /*DIVS*/
     .os,
     .screenshots {
@@ -143,14 +144,25 @@
     }
     /* FOOTER */
     footer {
-        line-height: 20px;
-        font-size: 12px;
+        max-width: 800px;
+        margin: 0px auto;
         padding: 10px 0px;
+        font-size: 12px;
+        line-height: 20px;
+        text-align: left;
         p {
             color: #898989;
             padding: 0px 5px 0px;
         }
+        a {
+            display: inline-block;
+            padding: 0px 5px 0px;
+            color: #1F2C33;
+            font-size: 12px;
+            font-weight: 700;
+        }
     }
+
 }
 
 #features {
