--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -89,10 +89,7 @@
             border-bottom: 1px solid #ED8C2B;
         }
     }
-    .tab {
-        cursor: pointer;
-    }
-    .lower-os {
+    .thumbnails {
         border-top: 1px solid #FFF;
         img {
             width: 67px;
@@ -100,11 +97,7 @@
             cursor: pointer;
         }
     }
-    .windows.tab:hover,
-    .osx.tab:hover,
-    .linux.tab:hover {
-        background-color: #EFDDCA;
-    }
+
     .screenshots {
         width: 660px;
         height: 290px;
@@ -129,9 +122,15 @@
     // .screenshots-text {
     //     overflow: auto;
     // }
-    .bottom {
+    #screenshots {
         background-color: #F8F9FA;
         border-top: 1px solid #EDEFF2;
+        header div {
+            cursor: pointer;
+            &:hover {
+                background-color: #EFDDCA;
+            }
+        }
     }
     .get-started {
         background-color: #FFF;
