Clean up package json demo page

--- a/_sass/_ven.zenburn.sass
+++ b/_sass/_ven.zenburn.sass
@@ -1,9 +1,9 @@
 .hljs
-	display: block
-	overflow-x: auto
-	padding: 0.5em
-	color: #A6A5BA
-	-webkit-text-size-adjust: none
+    display: block
+    overflow-x: auto
+    padding: 0.5em
+    color: #A6A5BA
+    -webkit-text-size-adjust: none
 
 .hljs-keyword,
 .hljs-tag,
@@ -15,23 +15,23 @@
 .hljs-status,
 .clojure .hljs-attribute,
 .lang-javascript .hljs-value
-	color: #E3CEAB
+    color: #E3CEAB
 
 .django .hljs-template_tag,
 .django .hljs-variable,
 .django .hljs-filter .hljs-argument
-	color: #A6A5BA
+    color: #A6A5BA
 
 .hljs-number,
 .hljs-date
-	color: #8CD0D3
+    color: #8CD0D3
 
 .dos .hljs-envvar,
 .dos .hljs-stream,
 .hljs-variable,
 .apache .hljs-sqbracket,
 .hljs-name
-	color: #EFDCBC
+    color: #EFDCBC
 
 .dos .hljs-flow,
 .diff .hljs-change,
@@ -39,11 +39,11 @@
 .python .hljs-built_in,
 .hljs-literal,
 .tex .hljs-special
-	color: #EFEFAF
+    color: #EFEFAF
 
 .diff .hljs-chunk,
 .hljs-subst
-	color: #8F8F8F
+    color: #8F8F8F
 
 .dos .hljs-keyword,
 .hljs-decorator,
@@ -55,13 +55,13 @@
 .nginx .hljs-built_in,
 .tex .hljs-command,
 .hljs-prompt
-	color: #EFEF8F
+    color: #EFEF8F
 
 .dos .hljs-winutils,
 .ruby .hljs-symbol,
 .ruby .hljs-symbol .hljs-string,
 .ruby .hljs-string
-	color: #DCA3A3
+    color: #DCA3A3
 
 .diff .hljs-deletion,
 .hljs-string,
@@ -78,7 +78,7 @@
 .apache .hljs-cbracket,
 .tex .hljs-formula,
 .coffeescript .hljs-attribute
-	color: #CC9393
+    color: #CC9393
 
 .hljs-shebang,
 .diff .hljs-addition,
@@ -86,7 +86,7 @@
 .hljs-annotation,
 .hljs-pi,
 .hljs-doctype
-	color: #7F9F7F
+    color: #7F9F7F
 
 .coffeescript .javascript,
 .javascript .xml,
@@ -95,7 +95,27 @@
 .xml .vbscript,
 .xml .css,
 .xml .hljs-cdata
-	opacity: 0.5
+    opacity: 0.5
 
 .hljs-comment a
-	color: #869886
+    color: #869886
+
+.code
+    code
+        display: inline-block
+        background: #F9B88F
+        border-radius: 4px
+        padding: 1px 4px 2px
+        margin: 0px 1px 1px 0px
+        color: #911146
+        font-size: 0.85em
+    pre code
+        display: block
+        background: #2B2728
+        background-image: url('/_img/noise.png')
+        background-position: 110px 40px
+        margin-bottom: 12px
+        padding: 10px
+        color: #A6A5BA
+        font-size: 0.8em
+        line-height: 1.64em
