Fix package.json issues with Firefox

--- a/_sass/_crossbrowser.sass
+++ b/_sass/_crossbrowser.sass
@@ -2,7 +2,13 @@
 // CSS to fix issues that only occur on specific OS's, Devices, Browsers, or Platforms.
 
 // 6. Desktops
-
+.firefox #package
+    .packagecode
+        max-height: 1326px
+    .practical
+        top: -1326px
+    pre
+        height: 1326px
 
 // 5. Laptops
 @media screen and (max-width:1429px)
