--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -213,6 +213,7 @@
     100% { background-size: 1000px 400px; } }
 
 #jumbotron {
+    width: 100%;
     background-attachment: fixed;
     background: -webkit-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
        background: -moz-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
